Reduce composited smooth scroll latency by a frame (also fixes latency UMAs).

Previously input which triggered a smooth scroll didn't scroll
at all on the first frame of the smooth scroll animation.

This introduced unnecessary latency, and also prevented out input
latency instrumentation from realizing that the input produced a
frame.

This removes that latency by starting the animation one frame in,
and causes our input latency pipeline to recognize that this input
triggered a frame being drawn.

The main thread case still needs to be fixed.

BUG=599910, 717652
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2863103002
Cr-Commit-Position: refs/heads/master@{#472542}

Former-commit-id: 7fe8085f9f4f10d88ec704588adea49392303fbe