cc/animation/animation_host.cc
@@ -528,10 +528,12 @@ void AnimationHost::ImplOnlyScrollAnimationCreate(
     ElementId element_id,
     const gfx::ScrollOffset& target_offset,
     const gfx::ScrollOffset& current_offset,
-    base::TimeDelta delayed_by) {
+    base::TimeDelta delayed_by,
+    base::TimeDelta animation_start_offset) {
   DCHECK(scroll_offset_animations_impl_);
   scroll_offset_animations_impl_->ScrollAnimationCreate(
-      element_id, target_offset, current_offset, delayed_by);
+      element_id, target_offset, current_offset, delayed_by,
+      animation_start_offset);
 }
 
 bool AnimationHost::ImplOnlyScrollAnimationUpdateTarget(
