cc/trees/layer_tree_host_unittest_animation.cc
@@ -811,7 +811,7 @@ class LayerTreeHostAnimationTestScrollOffsetAnimationTakeover
     if (host_impl->sync_tree()->source_frame_number() == 0) {
       GetImplAnimationHost(host_impl)->ImplOnlyScrollAnimationCreate(
           scroll_layer_->element_id(), gfx::ScrollOffset(650.f, 750.f),
-          gfx::ScrollOffset(10, 20), base::TimeDelta());
+          gfx::ScrollOffset(10, 20), base::TimeDelta(), base::TimeDelta());
     }
   }
 
@@ -906,7 +906,7 @@ class LayerTreeHostAnimationTestScrollOffsetAnimationAdjusted
     if (host_impl->sync_tree()->source_frame_number() == 0) {
       GetImplAnimationHost(host_impl)->ImplOnlyScrollAnimationCreate(
           scroll_layer_->element_id(), gfx::ScrollOffset(650.f, 750.f),
-          gfx::ScrollOffset(10, 20), base::TimeDelta());
+          gfx::ScrollOffset(10, 20), base::TimeDelta(), base::TimeDelta());
     }
   }
 
